# nemo-go

./: .gitignore  README.md  go.mod  go.sum  pyproject.toml
audio/: filterbank.go  normalize.go  preprocess.go  preprocess_test.go  stft.go
audio/testdata/: ref_mel_htk.json
checkpoint/: loader.go  nemo.go
cmd/nemo-transcribe/: main.go
internal/mathutil/: math.go
model/: model.go
model/canary/: decoder.go  model.go
model/parakeet/: decoder.go  model.go
model/rnnt/: decoder.go  model.go
onnx/: session.go  tensor.go
scripts/: export_onnx.py  gen_ref_mel.py
tokenizer/: aggregate.go  sentencepiece.go  tokenizer.go  tokenizer_test.go
