[project]
name = "nemo-go-scripts"
version = "0.1.0"
description = "Python scripts for nemo-go (ONNX export, reference data generation)"
requires-python = ">=3.10"
dependencies = [
    "nemo-toolkit[asr]",
    "numpy",
    "librosa",
    "onnx",
    "onnxscript>=0.6.2",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", marker = "sys_platform != 'linux' and sys_platform != 'darwin'" },
  { index = "pytorch-cu129", marker = "sys_platform == 'linux'" },
  { index = "pypi", marker = "sys_platform == 'darwin'" },
]

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
explicit = true

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu129"
url = "https://download.pytorch.org/whl/cu129"
explicit = true
